correction alignement restaurant index.html

--- a/css/style.css
+++ b/css/style.css
@@ -256,13 +256,9 @@ input::placeholder {
 .restaurant {
   padding: 50px 20px;
   background: #F6F6F6;
-  display: flex;
-  flex-direction: column;
+  text-align: center;
 }
 @media screen and (min-width: 660px) {
-  .restaurant {
-    align-items: center;
-  }
   .restaurant__List {
     display: flex;
     justify-content: space-around;
